# cuda-sm-scheduler

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  saxpy.cu
models/: .mlc-log.txt
models/imagenet_val_jpeg/: tmp-state.json
src/: parallel_kernels_test.cu  run_inference.py  sm-centric  sm-centric.cu  sm-centric_macros.hh  sm_centric_latencies.csv
src/cuda-linear-nn/: linear-neural-network.cu  linear_relu_linear_sigmoid.hh  nn_launcher.cu  nn_launcher.hh
src/cuda-neural-network/: linear_relu_linear_sigmoid.cu  linear_relu_linear_sigmoid.hh  nn_launcher.cu  nn_launcher.hh
src/cuda_cnn/: fused_cnn.cu  fused_cnn.hh  fused_cnn_launcher.cu
